--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -15,6 +15,7 @@
     height: 50%;
   }
   &__headline {
+    width: 35%;
     h2 {
       @include darkHeadline;
       margin-bottom: 16px;
@@ -64,6 +65,7 @@
     padding: 40px 0;
   }
   .about__headline {
+    width: 100%;
     height: 58px;
     margin-bottom: 40px;
   }
