--- a/src/components/header-text/Header.scss
+++ b/src/components/header-text/Header.scss
@@ -12,7 +12,7 @@
 
   &-wrap {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 100px 0;
     margin: 0;
