--- a/src/components/nav-bar/Nav-bar.scss
+++ b/src/components/nav-bar/Nav-bar.scss
@@ -9,9 +9,10 @@ header {
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   border-bottom-width: 0;
+  width: 100%;
 
   &__logo {
     padding: 16px 0;
