--- a/src/App-styles.scss
+++ b/src/App-styles.scss
@@ -12,7 +12,14 @@ $backgroundDarkGrey: rgba(174, 169, 168, 1);
   color: #202523;
   letter-spacing: -1px;
 }
-
+@mixin cardShape {
+  background: linear-gradient(0deg, #ffffff, #ffffff),
+    linear-gradient(117.15deg, #1bd1fc 0%, #316dd1 100%);
+  box-shadow: 0px 32px 16px rgba(0, 0, 0, 0.09),
+    0px 16px 8px rgba(0, 0, 0, 0.09), 0px 8px 4px rgba(0, 0, 0, 0.09),
+    0px 4px 2px rgba(0, 0, 0, 0.09), 0px 2px 1px rgba(0, 0, 0, 0.09);
+  border-radius: 16px;
+}
 //font variables
 $fontWhite: #ffffff;
 $fontDarkButton: #020213;
