--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -73,3 +73,68 @@
 .card-dont li:last-child p {
   border-bottom: none;
 }
+
+.carousel-cards-wrap {
+  display: none;
+}
+
+@media screen and (max-width: 375px) {
+  .cards__wrapper {
+    display: none;
+  }
+  .cards {
+    padding: 80px 0;
+  }
+  .cards__headline {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .cards__headline h2 {
+    font-size: 32px;
+  }
+  .carousel-cards-wrap {
+    display: block;
+  }
+  .carousel-card {
+    height: 560px;
+    width: 96%;
+    margin: 0 auto;
+    border-radius: 16px;
+    padding: 24px;
+    background: linear-gradient(0deg, #ffffff, #ffffff),
+      linear-gradient(117.15deg, #1bd1fc 0%, #316dd1 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .carousel-card-img {
+    width: 125px;
+    height: 125px;
+  }
+  .carousel-card h3 {
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 110%;
+
+    letter-spacing: -1px;
+
+    color: #202523;
+  }
+  .carousel-card ul {
+    width: 90%;
+    list-style: none;
+    padding-left: 0;
+    text-align: left;
+  }
+  .carousel-card li {
+    padding: 6px 0;
+    font-size: 16px;
+    line-height: 25px;
+    color: #596067;
+    border-bottom: 1px solid $backgroundDarkGrey;
+  }
+  .carousel-card li:last-child {
+    border-bottom: none;
+  }
+}
