desktop design for aplicants form

--- a/src/components/Vacancies/Vacancies.scss
+++ b/src/components/Vacancies/Vacancies.scss
@@ -12,8 +12,12 @@
 
 .vacancies {
   width: 100%;
-  height: 390px;
+  //   height: 1612px;
   background-color: $backgroundDark;
+}
+.vacancies-nav {
+  width: 100%;
+  height: 390px;
 }
 .vacancies h2 {
   margin: 0;
@@ -52,7 +56,6 @@
 .departments--wrap {
   background-color: $backgroundWhiter;
   backdrop-filter: blur(150px);
-
   height: 1222px;
 }
 .departments {
@@ -70,11 +73,13 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  flex-flow: wrap;
   gap: 24px;
 }
+.departments__design > .departments__cards {
+  flex-wrap: wrap;
+}
 .card {
-  width: 400px;
+  width: clamp(320px, 30%, 400px);
   height: 150px;
   padding: 32px 30px;
   background: #ffffff;
@@ -116,6 +121,8 @@
 @media screen and (max-width: 768px) {
   .departments__cards {
     justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-shrink: 1;
   }
   .card {
     width: 48%;
