footer layout - done!

--- a/src/components/Perks/Perks.scss
+++ b/src/components/Perks/Perks.scss
@@ -67,6 +67,9 @@
   .carousel-status {
     display: none;
   }
+  .control-dots > .dot.selected {
+    background-color: $accentGreen;
+  }
 }
 @media screen and (max-width: 375px) {
   .perks__grid {
