--- a/src/components/Form-application/Form.scss
+++ b/src/components/Form-application/Form.scss
@@ -48,7 +48,7 @@
     }
     textarea {
       margin: 0;
-      width: 100;
+      width: 100%;
       font-size: 16px;
       line-height: 24px;
       border: none;
